# MicroClimaEDGE

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/Adafruit_BMP280_Library/: CMakeLists.txt
components/Adafruit_GFX/: CMakeLists.txt
components/Adafruit_SSD1306/: CMakeLists.txt
components/PubSubClient/: CMakeLists.txt
main/: CMakeLists.txt  MicroClimaEdge.c  MicroClimaEdge.cpp  bmp280_driver.c  bmp280_driver.h  controle.c  controle.cpp  controle.h  display.c  display.cpp  display.h  oled_driver.c  oled_driver.h  sdkconfig.defaults  sensores.c  sensores.cpp  sensores.h  telemetria.c  telemetria.cpp  telemetria.h
